<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgall"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/diettitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/diettitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#397f00"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/feasttextview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feasttextview"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/feast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:hint="@string/feast"
                android:textSize="12sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/menutextview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menutextview"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:hint="@string/menu"
                android:textSize="12sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/setDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#bdefeb"
                android:hint="@string/date"
                android:inputType="date"
                android:shadowColor="#ffffff"
                android:textColor="#3399ff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTime"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/setTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#bdefeb"
                android:hint="@string/bTime"
                android:inputType="time"
                android:textColor="#3399ff" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/activity_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/alarm"
            android:textColor="#ff0000" />

        <Button
            android:id="@+id/bSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:onClick="run"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/bSave" />
    </LinearLayout>

</ScrollView>