<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgall"
    android:orientation="vertical" >
    
      <TextView
        android:id="@+id/charttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/tvSingleDietChartTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#397f00"
        android:textSize="30sp" />
      
     <ListView
        android:id="@+id/onedaychart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ListView>
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
         
         <Button
                android:id="@+id/bAddMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="@string/addamore" />
         
          <Button
                android:id="@+id/bUpdateChart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/bUpdateVP" />
          
           <Button
                android:id="@+id/bDeleteChart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/deletechart" />
         
         
     </LinearLayout>
    

</LinearLayout>
